@@ -18,6 +18,12 @@
 # under the License.
 
 
+# Print an error message and exit
+function die() {
+        echo "${this}: $@" 1>&2
+        exit 1
+}
+
 #====================================
 #Default config param values
 #====================================
@@ -71,6 +77,23 @@ else
 fi
 WEBHCAT_CONF_DIR="${WEBHCAT_CONF_DIR:-$DEFAULT_CONF_DIR}"
 
+#set defaults for HCAT_PREFIX, HIVE_HOME, TEMPLETON_HOME that work for default directory structure
+DEFAULT_HCAT_PREFIX="${WEBHCAT_PREFIX}"
+export HCAT_PREFIX="${HCAT_PREFIX:-$DEFAULT_HCAT_PREFIX}"
+if [ ! -f ${HCAT_PREFIX}/bin/hcat ]; then
+    die "HCAT_PREFIX=${HCAT_PREFIX} is invalid";
+fi
+DEFAULT_HIVE_HOME="${WEBHCAT_PREFIX}/.."
+export HIVE_HOME="${HIVE_HOME:-$DEFAULT_HIVE_HOME}"
+if [ ! -f ${HIVE_HOME}/bin/hive ]; then
+    die "HIVE_HOME=${HIVE_HOME} is invalid";
+fi
+DEFAULT_TEMPLETON_HOME="${WEBHCAT_PREFIX}"
+export TEMPLETON_HOME="${TEMPLETON_HOME:-$DEFAULT_TEMPLETON_HOME}"
+if [ ! -d ${TEMPLETON_HOME}/share/webhcat ]; then
+    die "TEMPLETON_HOME=${TEMPLETON_HOME} is invalid";
+fi
+
 #users can add various env vars to webhcat-env.sh in the conf
 #rather than having to export them before running the command
 if [ -f "${WEBHCAT_CONF_DIR}/webhcat-env.sh" ]; then
@@ -89,6 +112,6 @@ elif [ -f ${WEBHCAT_PREFIX}/bin/hadoop ]; then
   HADOOP_PREFIX=$WEBHCAT_PREFIX
 #otherwise see if HADOOP_PREFIX is defined
 elif [ ! -f ${HADOOP_PREFIX}/bin/hadoop ]; then
-  echo "Hadoop not found."
+  echo "${this}: Hadoop not found."
   exit 1
 fi
